src/test/egern/success/function_call.egern
func square(arg) {
    return arg * arg;
}

print(square(4));
