src/test/egern/fail/assign_parameter_to_wrong_type.egern
func square(n: boolean): int {
    n = 4;
    return n * n;
}

square(true);
